--- a/src/public/jsx/components/css/board.css
+++ b/src/public/jsx/components/css/board.css
@@ -1,23 +1,21 @@
-/* board.css */
-
 .my-masonry-grid {
     display: flex;
-    margin-left: -16px; /* 여백 보정 */
+    margin-left: -16px; 
     width: auto;
 }
 
 .my-masonry-grid_column {
     background-clip: padding-box;
-    padding: 16px; /* 여백 설정 */
+    padding: 16px; 
     flex-grow: 1;
 }
 
 .post {
     border: 1px solid #ccc;
-    border-radius: 8px;
     padding: 16px;
     cursor: pointer;
-    margin-bottom: 16px; /* 아이템 간 간격 설정 */
+    margin-bottom: 16px; 
+    background-color : white;
 }
 
 .post img {
@@ -38,7 +36,6 @@
 @media (max-width: 700px) {
     .post {
         padding: 8px;
-        border-radius: 4px;
     }
 
     .post-title {
