--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -1,35 +1,3 @@
-@font-face {
-  font-family: 'jaram';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/iceJaram-Rg.woff2')
-    format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'GangwonEdu_OTFBoldA';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff')
-    format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-* {
-  font-family: 'GangwonEdu_OTFBoldA';
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 150px;
-}
-
-.logo {
-  height: 150px;
-  float: right;
-  cursor: pointer;
-}
 /* 모달 스타일 */
 .modal {
   display: none;
@@ -56,198 +24,142 @@
   transform: translate(-50%, -50%);
   text-align: left;
   overflow: auto;
-}
-main {
-  padding: 0px 40px 40px 40px;
+  padding: 2rem;
 }
 
-.post-info {
-  display: flex;
-  align-items: center;
-  gap: 10px;
+.report_content,
+#comment-edit-textarea {
+  margin: 2rem 0 2rem 0;
+  width: 95%;
+  border: 1px solid #d2d2d2;
 }
 
-.post-nickname,
-.post-view,
-.post-date,
-.post-content {
-  font-size: 20px;
+.edit-post-Box > div > textarea {
+  margin: 0.5rem 0rem;
+  width: 95%;
+
+  border: 1px solid #d2d2d2;
+}
+.edit-post-Box > div > input {
+  margin: 0.5rem 0rem;
+  width: 95%;
+  border: 1px solid #d2d2d2;
+}
+
+.modalContent > button {
+  margin: 0rem 0.5rem;
+  border: none;
+  background-color: white;
+}
+
+.post-category {
+  border: 1px solid #d2d2d2;
+  border-radius: 30px;
+  width: 3rem;
+  height: 1rem;
+  padding: 1rem;
 }
 
 .post-title {
-  font-family: 'jaram';
-  font-size: 60px;
+  font-size: 32px;
   font-weight: 900;
-  margin: 10px 0px 10px 0px;
+  margin-top: 2rem;
+}
+.post-box,
+.comment-box {
+  width: 70%;
+  margin: 10rem;
 }
 
-.post-view {
-  display: inline-block;
-  margin-right: auto; /* 좌측 정렬 */
-  font-size: 14px;
+.comment-info {
+  width: 95%;
+  padding: 1rem 1rem 2rem 1rem;
+  font-size: 12px;
+  background-color: #e5e2e2;
+  color: #323232;
+  border-radius: 10px;
+  margin: 2rem 0rem;
 }
-
-.post-buttons {
+.comment-nickname,
+.post-nickname {
   display: flex;
-  gap: 10px;
-  justify-content: flex-end;
-  margin-top: 10px;
+  flex-direction: row;
+  align-items: center;
 }
-
-.edit-button {
-  background-color: black;
-  color: rgb(255, 255, 255);
+#comment-writter,
+#post-writter {
+  font-weight: 900;
 }
-
-.delete-button {
-  background-color: black;
-  color: rgb(255, 255, 255);
+.comment-date {
+  margin-top: 1rem;
+}
+.comment-buttons,
+.post-buttons {
+  float: right;
+}
+.comment-buttons > button {
+  margin: 0rem 0.5rem;
+  border: none;
+  background-color: #e5e2e2;
 }
 
 .post-buttons > button {
-  padding: 5px 10px;
+  margin: 0rem 0.5rem;
   border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  background-color: #f9f9f9;
+}
+
+.report-comment-Box-btn,
+.edit-comment-Box-btn,
+.edit-post-Box-btn,
+.report-post-Box-btn {
+  float: right;
+  margin-top: 1rem;
+}
+
+.report-comment-Box-btn > button,
+.edit-comment-Box-btn > button,
+.edit-post-Box-btn > button,
+.report-post-Box-btn > button {
+  margin: 0rem 0.5rem;
+  border: none;
+  background-color: white;
+}
+.button_delete-comment-button,
+.button_delete-button,
+.report-comment-close-btn,
+.edit-close-btn,
+.report-post-close-btn {
+  color: darkgray;
+}
+.button_report-comment-button,
+.button_report-button,
+.report-comment-btn,
+.report-post-btn {
+  color: tomato;
 }
 
 .button_bookmark-button {
-  background-color: yellow;
-  color: black;
+  color: orange;
 }
-.button_report-button {
-  background-color: rgb(255, 145, 0);
-  color: rgb(255, 255, 255);
+.edit-comment-btn {
+  color: black;
 }
 
 .comment-input {
-  width: 92%;
-  padding: 10px;
-  margin: 10px 0px 10px 0px;
-  border: 4px solid #000000;
-  border-radius: 8px;
+  width: 80%;
+  height: 0.8rem;
+  padding: 1rem;
+  font-size: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
-
-.comment-input::placeholder {
-  font-size: 16px;
-}
-
 .comment-submit-button {
-  padding: 10px 20px;
-  background-color: #000000;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.comment-list {
-  margin-top: 20px;
-}
-
-.comment-item {
-  margin-bottom: 10px;
-}
-
-.comment-content {
-  padding: 10px;
-  background-color: black;
+  height: 3em;
+  background-color: #323232;
+  padding: 0.7rem 1rem;
   color: white;
-  border: 4px solid #000000;
-  border-radius: 8px;
-  font-size: 16px;
-  line-height: 1.6;
-  display: flex;
-  align-items: center;
-  margin-right: 10px;
-}
-
-.comment-nickname {
-  font-weight: bold;
-  margin-right: 10px;
-}
-
-.comment-buttons {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  margin-top: 5px;
-}
-
-.comment-edit-button {
-  margin-left: 10px;
-  margin-right: 5px; /* 버튼 사이 간격 */
-  padding: 5px 10px;
-  background-color: #000000;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.comment-delete-button {
-  margin-left: 10px;
-  margin-right: 5px; /* 버튼 사이 간격 */
-  padding: 5px 10px;
-  background-color: #000000;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.comment-report-button {
-  margin-left: 10px;
-  margin-right: 5px; /* 버튼 사이 간격 */
-  padding: 5px 10px;
-  background-color: #f37d0f;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.comment-box {
-  border-top: solid 2px black;
-  margin-top: 100px;
-  padding-top: 10px;
-}
-
-/* footer */
-footer {
-  margin-top: 200px;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.post_title,
-.post_category,
-.post_content,
-.post_img {
-  width: 100%;
-  margin: 13px 13px 13px 0px;
-}
-
-.post_content {
-  height: 150px;
-}
-.report_content {
-  width: 100%;
-  margin: 13px 13px 13px 0px;
-}
-
-.modalContent > div > button {
   border-radius: 5px;
-  border: none;
-  background-color: black;
-  color: white;
-  padding: 5px 5px 5px 5px;
-}
-
-.modalContent > div > div > button {
-  border-radius: 5px;
-  border: none;
-  background-color: black;
-  color: white;
-  padding: 5px 5px 5px 5px;
+  float: right;
+  margin-right: 2rem;
 }
