--- a/src/public/jsx/components/css/annual.css
+++ b/src/public/jsx/components/css/annual.css
@@ -1,4 +1,3 @@
-
 .category {
     display: flex;
     justify-content: flex-start;
@@ -17,17 +16,20 @@
     border: 1px solid #ccc;
     background-color: #f8f8f8;
     border-radius: 30px;
-    margin : 10px
+    margin: 10px;
 }
 
 .sort-select {
     margin-left: auto;
+    margin-right: 50px;
     display: flex;
     justify-content: flex-start;
-    border-radius: 10px;
-    font-size : 0.8rem;
+    align-items: center; /* 아이템을 수직 중앙 정렬 */
+    border-radius: 30px;
+    font-size: 0.8rem;
     border: 1px solid #ccc;
     background-color: #f8f8f8;
     height: 43px;
-    margin-top : 10px;
+    margin-top: 10px;
+    padding: 8px 24px 8px 24px; 
 }
