--- a/src/public/jsx/components/css/annual.css
+++ b/src/public/jsx/components/css/annual.css
@@ -1,35 +1,57 @@
-.category {
-    display: flex;
-    justify-content: flex-start;
-    list-style: none;
-    padding: 0;
-    flex-direction: row; /* 가로 방향으로 나열하도록 설정 */
+.categorybox {
+  display: flex;
+  position: relative;
+  padding: 0px, 64px, 64px, 64px;
+  justify-content: space-between;
+  height: 120px;
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-top: 25px;
 }
 
-.category li {
-    margin-right: 10px;
+.category {
+  list-style: none;
+  padding: 0;
+  flex-direction: row; /* 가로 방향으로 나열하도록 설정 */
 }
 
 .category-button {
-    padding: 10px 18px; /* 버튼에 여백을 추가 */
-    cursor: pointer;
-    border: 1px solid #ccc;
-    background-color: #f8f8f8;
-    border-radius: 30px;
-    margin: 10px;
+  padding: 10px 18px; /* 버튼에 여백을 추가 */
+  cursor: pointer;
+  border: 1px solid #d2d2d2;
+  background-color: #f8f8f8;
+  border-radius: 999px;
+  margin-right: 25px;
+  width: 104px;
+  height: 56px;
+  position: relative;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.sort {
+  position: absolute;
+  right: 0;
 }
 
 .sort-select {
-    margin-left: auto;
-    margin-right: 50px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center; /* 아이템을 수직 중앙 정렬 */
-    border-radius: 30px;
-    font-size: 0.8rem;
-    border: 1px solid #ccc;
-    background-color: #f8f8f8;
-    height: 43px;
-    margin-top: 10px;
-    padding: 8px 24px 8px 24px; 
+  border-radius: 999px;
+  width: 125px;
+  height: 56px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+  text-align: center;
+  border: 1px solid #ccc;
+  background-color: #f8f8f8;
+  padding: 8px 24px;
+}
+
+.category-button.selected {
+  background-color: #323232;
+  color: #ffffff;
 }
