--- a/src/public/jsx/components/css/board.css
+++ b/src/public/jsx/components/css/board.css
@@ -1,44 +1,84 @@
+.boardmain {
+  padding: 0px, 42px, 80px, 42px;
+  gap: 24px;
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
 .my-masonry-grid {
-    display: flex;
-    margin-left: -16px; 
-    width: auto;
+  display: flex;
+  width: auto;
 }
 
 .my-masonry-grid_column {
-    background-clip: padding-box;
-    padding: 16px; 
-    flex-grow: 1;
+  background-clip: padding-box;
+  padding: 16px;
+  flex-grow: 1;
 }
 
 .post {
-    border: 1px solid #ccc;
-    padding: 16px;
-    cursor: pointer;
-    margin-bottom: 16px; 
-    background-color : white;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  margin-bottom: 16px;
+  background-color: #ffffff;
+  box-shadow: 0 5px 5px rgba(185, 185, 189, 0.62);
+  border: none;
+  padding: 16px;
 }
 
-.post img {
-    max-width: 100%;
-    height: auto;
+.post p {
+  margin: 0;
+}
+
+.postbox {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  height: 81px;
 }
 
 .post-title {
-    font-size: 18px;
-    margin-top: 8px;
+  margin-top: 0.3cm !important;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
-.post-content {
-    margin-top: 8px;
+.post-nickname {
+  margin-top: 0.2cm !important;
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #979797;
+}
+
+.post span {
+  font-family: Poppins;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
+  color: #c2c2c2;
+  width: 47px;
+  height: 15px;
+  position: absolute;
+  right: 0;
+  bottom: -13px;
 }
 
 /* 브라우저 크기가 700px 이하일 때 post의 크기를 조절 */
 @media (max-width: 700px) {
-    .post {
-        padding: 8px;
-    }
+  .post {
+    padding: 8px;
+  }
 
-    .post-title {
-        font-size: 16px;
-    }
+  .post-title {
+    font-size: 16px;
+  }
 }
