--- a/src/public/jsx/components/mypage/myinfo.css
+++ b/src/public/jsx/components/mypage/myinfo.css
@@ -136,15 +136,14 @@
 }
 
 .modal {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: none;
   position: fixed;
-  top: 0;
+  z-index: 1;
   left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background-color: rgb(0, 0, 0, 0.1);
 }
 
 .modal h2 {
@@ -159,6 +158,9 @@
 }
 
 .modal-content {
+  position: absolute;
+  top: 25%;
+  left: 25%;
   background: #fff;
   padding: 48px;
   border-radius: 36px;
