--- a/src/public/jsx/components/mypage/myinfo.css
+++ b/src/public/jsx/components/mypage/myinfo.css
@@ -109,8 +109,32 @@
 
 .myinfo_signout {
   text-align: center;
-  margin-top: 45px;
+  margin-top: 100px;
   color: red;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  cursor: pointer;
+}
+
+.myinfo_admin {
+  text-align: center;
+  margin-top: 45px;
+  color: green;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  cursor: pointer;
+}
+
+.myinfo_pwchange {
+  text-align: center;
+  margin-top: 45px;
+  color: orange;
   font-family: Poppins;
   font-size: 20px;
   font-weight: 400;
@@ -167,7 +191,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border: 1px solid #d2d2d2;
   width: 632px;
-  height: 240px;
+  height: 400px;
   gap: 24px;
 }
 
