--- a/src/public/jsx/components/main/annual.css
+++ b/src/public/jsx/components/main/annual.css
@@ -46,7 +46,7 @@
   line-height: 24px;
   font-weight: 500;
   text-align: center;
-  border: 1px solid #ccc;
+  border: none;
   background-color: #f8f8f8;
   padding: 8px 24px;
 }
