--- a/src/public/jsx/components/sign/hello.css
+++ b/src/public/jsx/components/sign/hello.css
@@ -40,6 +40,23 @@
   cursor: pointer;
 }
 
+.timer {
+  width: 7.5rem;
+  height: 3.875rem;
+  border-radius: 0.75rem;
+  gap: 0.25rem;
+  background-color: black;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+  letter-spacing: 0.02em;
+  text-align: center;
+  border: none;
+  margin-left: 0.625rem;
+  cursor: pointer;
+}
+
 /* 나란히 있는 입력란 */
 
 .double-input {
