--- a/src/public/jsx/components/post/post.css
+++ b/src/public/jsx/components/post/post.css
@@ -2,17 +2,16 @@
     width: 100%;
     max-width: 1080px;
     margin: 0 auto;
-    padding: 0 64px; /* Adjusted padding */
+    padding: 0 64px;
     box-sizing: border-box;
     height: auto;
     display: flex;
     flex-direction: column;
-    gap: 1px; /* Adjusted gap */
+    gap: 1px;
   }
   
   .title {
     font-size: 24px;
-    /* font-weight: 600; */
     height: 56px; /* Adjusted height */
     line-height: 32px; 
     letter-spacing: 0.02em;
@@ -21,10 +20,12 @@
     align-self: flex-end; /* Added align-self */
     width : 99.2%;
     border-radius: 6px;
+    align-items: center;
+    border : 1px solid #ddd
   }
-  
+
   .content textarea {
-    width: 96.5%; 
+    width: calc(100% - 36px);
     max-width: 952px;
     height: 500px;
     border-radius: 6px;
@@ -43,11 +44,12 @@
     font-size: 20px; /* 글자 크기 조절 */
     border-radius: 6px; /* 필요한 경우에만 사용 */
     /* border: 1px solid #ddd; */
-    margin-bottom: 10px;
+   margin-bottom: 10px;
     align-self: flex-end; /* Added align-self */
     display: flex;
     justify-content: center;
     align-items: center;
+    border : 1px solid #ddd
   } 
 
   .button-container {
@@ -56,29 +58,20 @@
     font-size: 16px;
   }
 
-  .edit {
-    background-color : #323232;
-    color: white;
-    width: 102px;
-    height: 50px;
-    border-radius: 15px;
-    font-weight: 600;
-  }
-
   .write {
     background-color : #323232;
-    color : white;
-    width: 102px;
+    color: #ffffff !important;
+    width: 50px !important;
     height: 50px;
-    border-radius: 15px;
+    border-radius: 10px !important;
     font-weight: 600;
   }
 
   .cancel {
     background-color : #c2c2c2;
-    width: 102px;
+    width: 50px !important;
     height: 50px;
-    border-radius: 15px;
+    border-radius: 10px !important;
     font-weight: 600;
     margin-right : 2px;
   }
