--- a/src/public/jsx/pages/PostPage.css
+++ b/src/public/jsx/pages/PostPage.css
@@ -58,17 +58,18 @@
   width: 3rem;
   height: 1rem;
   padding: 1rem;
+  text-align: center;
 }
 
 .post-title {
-  font-size: 32px;
+  font-size: 32px !important;
   font-weight: 900;
-  margin-top: 2rem;
+  margin-top: 2rem !important;
 }
 .post-box,
 .comment-box {
   width: 70%;
-  margin: 10rem;
+  margin: 10%;
 }
 
 .comment-info {
@@ -146,20 +147,32 @@
   color: black;
 }
 
+.writeCommentBox {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
 .comment-input {
-  width: 80%;
+  width: 100%;
   height: 0.8rem;
   padding: 1rem;
   font-size: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  margin-right: 1rem;
 }
 .comment-submit-button {
-  height: 3em;
+  width: 8rem;
+  height: 3rem;
   background-color: #323232;
   padding: 0.7rem 1rem;
   color: white;
   border-radius: 5px;
-  float: right;
   margin-right: 2rem;
+}
+#postImage {
+  width: 50%;
+  height: 50%;
+  border-radius: 5px;
 }
