fix : POST PAGE CSS

--- a/src/public/jsx/pages/PostPage.css
+++ b/src/public/jsx/pages/PostPage.css
@@ -61,7 +61,7 @@
   text-align: center;
 }
 
-.post-title {
+.post-page-title {
   font-size: 32px !important;
   font-weight: 900;
   margin-top: 2rem !important;
