--- a/src/public/jsx/components/main/board.css
+++ b/src/public/jsx/components/main/board.css
@@ -8,16 +8,15 @@
 .my-masonry-grid {
   display: flex;
   width: fit-content;
+  width: auto;
 }
 
 .my-masonry-grid_column {
   background-clip: padding-box;
-  flex-grow: 1;
-  margin: 0 0.7rem 0 0.7rem;
+  padding-left: 16px;
 }
 
 .post {
-  width: 12rem;
   border: 1px solid #ccc;
   cursor: pointer;
   margin-bottom: 16px;
@@ -25,6 +24,14 @@
   box-shadow: 0 5px 5px rgba(185, 185, 189, 0.62);
   border: none;
   padding: 16px;
+}
+
+.post img {
+  max-width: 100%;
+  max-height: 50%;
+  height: auto;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .post p {
