--- a/src/public/jsx/components/post/post.css
+++ b/src/public/jsx/components/post/post.css
@@ -12,12 +12,11 @@
 
 .title {
   font-size: 16px;
-  height: 56px; /* Adjusted height */
   line-height: 32px;
   letter-spacing: 0.02em;
   color: #000000;
   margin-bottom: 10px;
-  align-self: flex-end; /* Added align-self */
+  align-self: flex-end;
   width: 99.2%;
   border-radius: 6px;
   align-items: center;
@@ -38,8 +37,7 @@
 }
 
 .annual-select {
-  width: 196px; /* 또는 필요한 크기로 조절 */
-  height: 56px; /* 또는 필요한 크기로 조절 */
+  width: 115px;
   padding: 1px; /* 옵션 내용과 경계 사이 여백 조절 */
   font-size: 16px;
   border-radius: 6px; /* 필요한 경우에만 사용 */
@@ -58,7 +56,7 @@
   font-size: 16px;
 }
 
-.write {
+/* .write {
   background-color: #323232;
   color: #ffffff !important;
   width: 50px !important;
@@ -74,7 +72,7 @@
   border-radius: 10px !important;
   font-weight: 600;
   margin-right: 2px;
-}
+} */
 
 .none {
   background-color: black;
@@ -86,4 +84,32 @@
   .cancel {
     min-width: 6rem !important;
   }
+}
+
+.content textarea {
+  height: 250px;
+}
+
+.title {
+  height: 30px;
+}
+
+.annual-select {
+  height: 30px;
+}
+
+.postcancel {
+  background-color: #c2c2c2;
+  height: 35px !important;
+  border-radius: 10px !important;
+  font-weight: 600;
+  margin-right: 2px;
+}
+
+.postwrite {
+  background-color: #323232;
+  color: #ffffff !important;
+  height: 35px !important;
+  border-radius: 10px !important;
+  font-weight: 600;
 }
