--- a/src/public/jsx/pages/ThreadsPage.css
+++ b/src/public/jsx/pages/ThreadsPage.css
@@ -45,12 +45,13 @@
 }
 
 .writeThread {
-  width: 100%;
-  height: 10rem;
+  width: 98.6%;
+  height: 6rem;
   padding: 1rem;
   font-size: 15px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  resize: none;
 }
 
 .container {
@@ -59,7 +60,6 @@
   background-color: #f9f9f9;
   padding: 20px;
   box-sizing: border-box;
-  margin-top: 20px;
   display: flex;
   flex-direction: column;
   height: 90vh;
@@ -70,13 +70,11 @@
   padding: 0.7rem 1rem;
   color: white;
   border-radius: 5px;
-  margin: 1rem -2rem 0 0;
+  margin: 1rem -1rem 0 0;
   float: right;
+  cursor: pointer;
 }
 
-#threadList {
-  margin-top: 8rem;
-}
 .thread {
   width: 95%;
   padding: 2rem;
@@ -91,13 +89,20 @@
 .delete-button,
 .report-button {
   font-size: 12px;
+  font-weight: 600;
   float: right;
   padding: 0.5rem;
-  margin: 0.5rem 0.5rem 3rem 0.5rem;
+  margin: 0.5rem -1rem 3rem 0.5rem;
   background-color: #ffffff;
   border: 1px solid #d5d5d5;
   color: #323232;
-  border-radius: 999px;
+  border-radius: 16px;
+  cursor: pointer;
+}
+
+.report-button:hover {
+  background-color: red;
+  color: #ffffff;
 }
 @media screen and (max-width: 430px) {
   .container {
