--- a/src/public/jsx/components/main/board.css
+++ b/src/public/jsx/components/main/board.css
@@ -111,3 +111,15 @@
     align-items: center;
   }
 }
+
+.bookmarks {
+  color: #c2c2c2;
+  position: absolute;
+  right: 0;
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
+}
