--- a/src/public/jsx/components/main/board.css
+++ b/src/public/jsx/components/main/board.css
@@ -1,27 +1,55 @@
-.boardmain {
-  padding: 0 42px 80px 42px;
-  gap: 24px;
-  margin-left: 25px;
-  margin-right: 25px;
+.board {
+  padding: 10px 55px;
+}
+.category {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
+.category > button,
+.sort > select {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  background-color: #f9f9f9;
+  border: 1px solid #d2d2d2;
+  padding: 10px;
+  font-size: 14px;
+  margin: 10px;
+  width: 70px;
+}
+
+.sort-select {
+  width: 90px;
+}
+
+.category-button.selected {
+  background-color: #323232 !important;
+  border: none;
+  color: white;
+}
+
+.board-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
 .my-masonry-grid {
   display: flex;
   width: fit-content;
   width: auto;
 }
 
-.my-masonry-grid_column {
-  background-clip: padding-box;
-  padding-left: 16px;
-}
-
 .post {
   border: 1px solid #ccc;
   cursor: pointer;
-  margin-bottom: 16px;
+  margin: 10px;
   background-color: #ffffff;
-  box-shadow: 0 5px 5px rgba(185, 185, 189, 0.62);
+  box-shadow: 0 10px 10px rgba(223, 223, 223, 0.62);
   border: none;
   padding: 16px;
 }
@@ -35,92 +63,41 @@
   box-shadow: 1px 1px 3px 1px #dadce0 inset;
 }
 
-.post p {
-  margin: 0;
+.postbox p {
+  margin: 0 2px;
+  font-size: 10px;
 }
 
-.postbox {
+.postbox div {
   display: flex;
-  flex-direction: column;
-  position: relative;
-  height: 81px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
-
-.post-title {
-  margin-top: 0.3cm !important;
-  font-family: Poppins;
-  font-size: 17px !important;
-  font-weight: 600;
-  line-height: 24px;
-  letter-spacing: 0em;
-  text-align: left;
+#post-title {
+  font-size: 14px;
+  font-weight: 900;
+  margin: 4px 2px;
 }
-
-#post-category {
-  font-size: 15px !important;
-}
-
-.post-nickname {
-  margin-top: 0.2cm !important;
-  margin-bottom: 0.1cm !important;
-  font-family: Poppins;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 18px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: #979797;
-}
-
-.post-date {
-  font-family: Poppins;
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 15px;
-  letter-spacing: 0em;
-  color: #c2c2c2;
-  width: 47px;
-  height: 15px;
-  position: absolute;
-  right: 0;
-  bottom: -13px;
-}
-
-.post-viewcount {
-  font-family: Poppins;
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 15px;
-  letter-spacing: 0em;
-  color: #c2c2c2;
-  width: 47px;
-  height: 15px;
-  position: absolute;
-  left: 0;
-  bottom: -13px;
-}
-.accordian-category {
-  display: none;
-}
-@media screen and (max-width: 1320px) {
-  .boardmain {
-    padding: 0 !important;
-    margin: 0 !important;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+@media screen and (max-width: 1200px) {
+  .board-nav {
+    overflow-x: auto;
+    white-space: nowrap;
   }
-}
 
-.bookmarks {
-  color: #c2c2c2;
-  position: absolute;
-  right: 0;
-  font-family: Poppins;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 18px;
-  letter-spacing: 0em;
-  text-align: left;
+  .category > button {
+    margin: 4px;
+    width: 60px;
+    height: 40px;
+    font-size: 13px;
+  }
+
+  .sort-select {
+    width: 60px;
+    height: 40px;
+  }
+
+  .sort > select {
+    font-size: 13px;
+  }
 }
