--- a/src/public/jsx/components/main/board.css
+++ b/src/public/jsx/components/main/board.css
@@ -38,7 +38,7 @@
   justify-content: space-between;
   align-items: center;
 }
-.my-masonry-grid {
+.masonry-grid {
   display: flex;
   width: fit-content;
   width: auto;
