fix : 마이페이지 CSS 수정

--- a/src/public/jsx/components/main/board.css
+++ b/src/public/jsx/components/main/board.css
@@ -20,6 +20,13 @@
   font-size: 14px;
   margin: 10px;
   width: 70px;
+  color: black;
+}
+.sort > select > option {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .sort-select {
