--- a/src/public/jsx/components/login/GeneralLogin.css
+++ b/src/public/jsx/components/login/GeneralLogin.css
@@ -12,6 +12,7 @@
   width: 280px;
   border: 1px solid #d2d2d2;
   border-radius: 7px;
+  cursor: pointer;
 }
 
 .general-login > #show-password {
@@ -21,4 +22,5 @@
   border: none;
   background: white;
   color: #427dee;
+  cursor: pointer;
 }
