--- a/src/public/jsx/components/mypage/MyInfo.css
+++ b/src/public/jsx/components/mypage/MyInfo.css
@@ -37,6 +37,7 @@
   border: none;
   font-size: 16px;
   font-weight: 600;
+  cursor: pointer;
 }
 
 #signout {
@@ -110,6 +111,7 @@
   width: 90%;
   border: 1px solid #d2d2d2;
   border-radius: 30px;
+  cursor: pointer;
 }
 
 .modal-content button {
@@ -119,6 +121,7 @@
   border: none;
   background: white;
   margin: 25px;
+  cursor: pointer;
 }
 #my-info-password-change {
   color: orange;
