--- a/src/public/jsx/pages/PostPage.css
+++ b/src/public/jsx/pages/PostPage.css
@@ -1,190 +1,11 @@
-/* 모달 스타일 */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0, 0, 0, 0.1);
-}
-
-.modal .modalContent {
-  background-color: #fefefe;
-  padding: 20px;
-  border-radius: 15px;
-  width: 30%;
-  box-shadow: 0px 4px 8px 0px rgb(0, 0, 0, 0.1);
-  color: #000;
-  height: 65%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: left;
-  overflow: auto;
-  padding: 2rem;
-}
-
-.report_content,
-#comment-edit-textarea {
-  margin: 2rem 0 2rem 0;
-  width: 95%;
-  border: 1px solid #d2d2d2;
-}
-
-.edit-post-Box > div > textarea {
-  margin: 0.5rem 0rem;
-  width: 95%;
-
-  border: 1px solid #d2d2d2;
-}
-.edit-post-Box > div > input {
-  margin: 0.5rem 0rem;
-  width: 95%;
-  border: 1px solid #d2d2d2;
-}
-
-.modalContent > button {
-  margin: 0rem 0.5rem;
-  border: none;
-  background-color: white;
-}
-
-.post-category {
-  border: 1px solid #d2d2d2;
-  border-radius: 30px;
-  width: 3rem;
-  height: 1rem;
-  padding: 1rem;
-  text-align: center;
-}
-
-.post-page-title {
-  font-size: 32px !important;
-  font-weight: 900;
-  margin-top: 2rem !important;
-}
-.post-box,
-.comment-box {
-  width: 70%;
-  margin: 20px 10% 10% 10%;
-}
-
-.comment-info {
-  width: 95%;
-  padding: 1rem 1rem 2rem 1rem;
-  font-size: 12px;
-  background-color: #e5e2e2;
-  color: #323232;
-  border-radius: 10px;
-  margin: 2rem 0rem;
-}
-.comment-nickname,
-.post-nickname {
+.post-page {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-}
-#comment-writter,
-#post-writter {
-  font-weight: 900;
-}
-.comment-date {
-  margin-top: 1rem;
-}
-.comment-buttons,
-.post-buttons {
-  float: right;
-}
-.comment-buttons > button {
-  margin: 0rem 0.5rem;
-  border: none;
-  background-color: #e5e2e2;
+  justify-content: center;
 }
 
-.post-buttons > button {
-  margin: 0rem 0.5rem;
-  border: none;
-  background-color: #f9f9f9;
-}
-
-.report-comment-Box-btn,
-.edit-comment-Box-btn,
-.edit-post-Box-btn,
-.report-post-Box-btn {
-  float: right;
-  margin-top: 1rem;
-}
-
-.report-comment-Box-btn > button,
-.edit-comment-Box-btn > button,
-.edit-post-Box-btn > button,
-.report-post-Box-btn > button {
-  margin: 0rem 0.5rem;
-  border: none;
-  background-color: white;
-}
-.button_delete-comment-button,
-.button_delete-button,
-.report-comment-close-btn,
-.edit-close-btn,
-.report-post-close-btn {
-  color: darkgray;
-}
-.button_report-comment-button,
-.button_report-button,
-.report-comment-btn,
-.report-post-btn {
-  color: tomato;
-}
-
-.button_report-button:hover {
-  color: black;
-}
-.button_bookmark-button {
-  color: orange;
-}
-
-.button_bookmark-button:hover {
-  color: black;
-}
-.edit-comment-btn {
-  color: black;
-}
-
-.writeCommentBox {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-}
-
-.comment-input {
-  width: 100%;
-  height: 0.8rem;
-  padding: 1rem;
-  font-size: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin-right: 1rem;
-}
-.comment-submit-button {
-  width: 8rem;
-  height: 3rem;
-  background-color: #323232;
-  padding: 0.7rem 1rem;
-  color: white;
-  border-radius: 5px;
-  margin-right: 2rem;
-}
-#postImage {
-  width: 50%;
-  height: 50%;
-  border-radius: 5px;
-}
-
-#post-writter,
-#comment-writter {
-  margin-left: 0.5rem;
+.post-page > div {
+  margin-top: 50px;
+  width: 1000px;
 }
