--- a/src/public/jsx/components/post/PostDetail.css
+++ b/src/public/jsx/components/post/PostDetail.css
@@ -27,12 +27,11 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  align-items: center;
+  align-items: end;
   height: 20px;
 }
 
 #buttons > button {
-  font-size: 18px;
   font-weight: 600;
   border: none;
   background: #f9f9f9;
