fix : Comment CSS

--- a/src/public/jsx/components/main/header.css
+++ b/src/public/jsx/components/main/header.css
@@ -3,6 +3,10 @@ section {
   height: 100px;
 }
 
+section > svg {
+  cursor: pointer;
+}
+
 section > div > button {
   width: 40px;
   height: 40px;
