--- a/src/public/jsx/components/post/PostDetail.css
+++ b/src/public/jsx/components/post/PostDetail.css
@@ -10,7 +10,6 @@
   font-size: 14px;
   width: 50px;
   color: black;
-  cursor: pointer;
 }
 .post-page #writter {
   display: flex;
@@ -35,11 +34,14 @@
   font-weight: 600;
   border: none;
   background: #f9f9f9;
+  cursor: pointer;
 }
 
-.post-page #edit-button,
-.post-page #bookmark-button {
+.post-page #edit-button {
   color: #427dee;
+  margin-right: 20px;
+}
+.post-page #bookmark-button {
   margin-right: 20px;
 }
 
