--- a/src/public/jsx/components/post/Comment.css
+++ b/src/public/jsx/components/post/Comment.css
@@ -6,9 +6,20 @@
   margin-bottom: 20px;
   font-size: 12px;
 }
-.comment > p {
+
+#comment-writter {
+  font-size: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+#comment-writter > p {
+  margin: 5px;
+  font-weight: 600;
   font-size: 12px;
 }
+
 #comment-input {
   width: 900px;
   padding: 0 5px;
@@ -52,7 +63,6 @@
   color: #427dee;
 }
 
-#comment-buttons > #report-button,
 #comment-buttons > #delete-buton {
   color: #ff6e4e;
 }
