--- a/src/public/jsx/components/post/Comment.css
+++ b/src/public/jsx/components/post/Comment.css
@@ -80,3 +80,11 @@
 .comment-list p {
   font-size: 18px;
 }
+@media screen and (max-width: 1200px) {
+  .comment-list > div {
+    width: 260px;
+  }
+  #comment-input {
+    width: 300px;
+  }
+}
