--- a/src/public/jsx/components/threads/Threads.css
+++ b/src/public/jsx/components/threads/Threads.css
@@ -93,17 +93,13 @@
   float: right;
   padding: 0.5rem;
   margin: 0.5rem -1rem 3rem 0.5rem;
-  background-color: #ffffff;
-  border: 1px solid #d5d5d5;
+  border: none;
   color: #323232;
   border-radius: 16px;
   cursor: pointer;
+  background: none;
 }
 
-.report-button:hover {
-  background-color: red;
-  color: #ffffff;
-}
 @media screen and (max-width: 430px) {
   .container {
     width: 80% !important;
