--- a/src/public/jsx/components/post/modal/PostEditModal.css
+++ b/src/public/jsx/components/post/modal/PostEditModal.css
@@ -1,74 +1,69 @@
 .edit-post {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
 }
 .edit-post > div {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   margin: 5px 0;
+  width: 300px;
 }
 .edit-post > div > label {
-  width: 60px;
+  width: 40%;
   margin: 10px;
 }
 .edit-post > div > textarea {
-  width: 330px;
+  width: 100%;
   height: 20px;
   border: 1px solid #d2d2d2;
-  border-radius: 7px;
+  border-radius: 30px;
 }
 .edit-post > div > input {
-  width: 280px;
+  width: 80%;
   height: 20px;
   border: 1px solid #d2d2d2;
-  border-radius: 7px;
+  border-radius: 30px;
 }
 
 .edit-post select {
-  width: 330px;
+  width: 100%;
   height: 20px;
   border: 1px solid #d2d2d2;
-  border-radius: 7px;
+  border-radius: 30px;
 }
 #img-delete {
   height: 20px;
-  width: 40px;
+  width: 20%;
   color: #ff6e4e;
   margin: 0px 0px 0px 10px;
 }
 #post-edit-post-buttons > button {
-  margin: 20px 60px;
+  margin: 20px 40px;
 }
 #post-edit-post-buttons {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 450px;
+  width: 300px;
 }
 #post-edit-close {
   color: black;
 }
+#change-image {
+  width: 100%;
+}
+
 @media screen and (max-width: 1200px) {
   .edit-post > div {
-    flex-direction: column;
-    justify-self: flex-start;
-    align-items: flex-start;
-  }
-  .edit-post > div > textarea,
-  .edit-post > div > input,
-  .edit-post select {
-    width: 100px;
-  }
-  .edit-post > div > label {
-    width: 60px;
-    margin: 3px 0;
+    width: 250px;
   }
   #img-delete {
-    margin: 0px 0px 0px 70px;
+    font-size: 12px;
+    margin: 0;
   }
 }
