fix : Write Post Page CSS

--- a/src/public/jsx/components/mypage/MyInfo.css
+++ b/src/public/jsx/components/mypage/MyInfo.css
@@ -114,7 +114,7 @@
   width: 90%;
   border: 1px solid #d2d2d2;
   border-radius: 30px;
-  cursor: pointer;
+  cursor: text;
 }
 
 .modal-content > input {
@@ -124,7 +124,7 @@
   width: 90%;
   border: 1px solid #d2d2d2;
   border-radius: 30px;
-  cursor: pointer;
+  cursor: text;
 }
 
 .modal-content > div {
