--- a/src/public/jsx/components/post/Comment.css
+++ b/src/public/jsx/components/post/Comment.css
@@ -24,7 +24,7 @@
   width: 900px;
   padding: 0 5px;
   height: 40px;
-  cursor: pointer;
+  cursor: text;
   border-radius: 7px;
   border: 1px solid #d2d2d2;
 }
