--- a/src/public/jsx/components/mypage/CardSection.css
+++ b/src/public/jsx/components/mypage/CardSection.css
@@ -29,7 +29,22 @@
 
 #my-page-post {
   width: 160px;
+}
+#inner-my-page-post {
   cursor: pointer;
+}
+#bookmark-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+#bookmark-buttons > button {
+  margin-top: 10px;
+  padding: 3px;
+  font-size: 10px;
+  width: 90px;
+  height: 20px;
 }
 @media screen and (max-width: 1200px) {
   .card-section {
