--- a/src/public/jsx/components/admin/DeleteButton.css
+++ b/src/public/jsx/components/admin/DeleteButton.css
@@ -13,6 +13,16 @@
   border-radius: 30px;
 }
 
+.no-reports {
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 600;
+}
+
 @media screen and (max-width: 1200px) {
   #delete-buttons > button {
     font-size: 10px;
