--- a/src/client/jsx/styles/main.css
+++ b/src/client/jsx/styles/main.css
@@ -9,7 +9,7 @@
 
 html  { width: 100%; height: 100%; }
 body  { width: 100%; height: 100%; margin: 0px; background-color: var(--background); }
-#root { width: 100%; height: 100%; }
+#root { width: 100%; }
 
 h1, h2, h3, h4, h5, h6 { margin: 0px; }
 a, p { margin: 0px; }
